// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`create-optimized-css removes unused selectors 1`] = `
"
        * { box-sizing: border-box }
        a { color: blue }
        .bx--accordion { background-color: yellow }
        .bx--accordion--end, .bx--accordion__content {color: black }
      "
`;

exports[`create-optimized-css removes unused IBM @font rules 1`] = `
"
    @font-face {
      font-family: 'CustomFont';
      src: url('path/to/custom-font.ttf');
    }

    @font-face {
      font-display: auto;
      font-family: IBM Plex Mono;
      font-style: normal;
      font-weight: 400;
    }
    @font-face {
      font-family: IBM Plex Sans;
      font-style: normal;
      font-weight: 600;
    }
    @font-face {
      font-family: IBM Plex Sans;
      font-style: normal;
      font-weight: 400;
    }
    @font-face {
      font-family: IBM Plex Sans;
      font-style: normal;
      font-weight: 300;
    }"
`;

exports[`create-optimized-css preserves all IBM fonts 1`] = `
"
    @font-face {
      font-family: 'CustomFont';
      src: url('path/to/custom-font.ttf');
    }

    @font-face {
      font-display: auto;
      font-family: IBM Plex Mono;
      font-style: normal;
      font-weight: 400;
    }
    @font-face {
      font-family: IBM Plex Sans;
      font-style: normal;
      font-weight: 600;
    }
    @font-face {
      font-family: IBM Plex Sans;
      font-style: normal;
      font-weight: 400;
    }
    @font-face {
      font-family: IBM Plex Sans;
      font-style: normal;
      font-weight: 300;
    }
    @font-face {
      font-family: IBM Plex Sans;
      font-style: normal;
      font-weight: 700;
    }
    @font-face {
      font-family: IBM Plex Sans;
      font-style: italic;
      font-weight: 400;
    }
    @font-face {
      font-family: IBM Plex Sans;
      font-style: normal;
      font-weight: 100;
    }"
`;
